// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`support prisma pagination: schema 1`] = `
"type User {
  id: Int!
  posts(take: Int, skip: Int, cursor: PostWhereUniqueInput): [Post!]!
}

type Post {
  id: Int!
  title: String!
}

input PostWhereUniqueInput {
  id: Int
}

type Query {
  ok: Boolean!
}"
`;

exports[`support prisma pagination: typegen 1`] = `
"import * as Typegen from '@morgothulhu/nexus-plugin-prisma/typegen'
import * as Prisma from '@prisma/client';

// Pagination type
type Pagination = {
    take?: boolean
    skip?: boolean
    cursor?: boolean
}

// Prisma custom scalar names
type CustomScalars = 'No custom scalars are used in your Prisma Schema.'

// Prisma model type definitions
interface PrismaModels {
  User: Prisma.User
  Post: Prisma.Post
}

// Prisma input types metadata
interface NexusPrismaInputs {
  Query: {
    users: {
      filtering: 'AND' | 'OR' | 'NOT' | 'id' | 'posts'
      ordering: 'id' | 'posts'
    }
    groupByUser: {
      filtering: 'AND' | 'OR' | 'NOT' | 'id' | 'posts'
      ordering: 'id' | '_count' | '_avg' | '_max' | '_min' | '_sum'
    }
    posts: {
      filtering: 'AND' | 'OR' | 'NOT' | 'id' | 'title' | 'author' | 'authorId'
      ordering: 'id' | 'title' | 'author' | 'authorId'
    }
    groupByPost: {
      filtering: 'AND' | 'OR' | 'NOT' | 'id' | 'title' | 'author' | 'authorId'
      ordering: 'id' | 'title' | 'authorId' | '_count' | '_avg' | '_max' | '_min' | '_sum'
    }
  },
  User: {
    posts: {
      filtering: 'AND' | 'OR' | 'NOT' | 'id' | 'title' | 'author' | 'authorId'
      ordering: 'id' | 'title' | 'author' | 'authorId'
    }
  }
  Post: {

  }
}

// Prisma output types metadata
interface NexusPrismaOutputs {
  Query: {
    aggregateUser: 'AggregateUser'
    users: 'User'
    user: 'User'
    groupByUser: 'UserGroupByOutputType'
    aggregatePost: 'AggregatePost'
    posts: 'Post'
    post: 'Post'
    groupByPost: 'PostGroupByOutputType'
  },
  Mutation: {
    createOneUser: 'User'
    deleteOneUser: 'User'
    deleteManyUser: 'AffectedRowsOutput'
    updateOneUser: 'User'
    updateManyUser: 'AffectedRowsOutput'
    upsertOneUser: 'User'
    createOnePost: 'Post'
    deleteOnePost: 'Post'
    deleteManyPost: 'AffectedRowsOutput'
    updateOnePost: 'Post'
    updateManyPost: 'AffectedRowsOutput'
    upsertOnePost: 'Post'
  },
  User: {
    id: 'Int'
    posts: 'Post'
  }
  Post: {
    id: 'Int'
    title: 'String'
    author: 'User'
    authorId: 'Int'
  }
}

// Helper to gather all methods relative to a model
interface NexusPrismaMethods {
  User: Typegen.NexusPrismaFields<'User'>
  Post: Typegen.NexusPrismaFields<'Post'>
  Query: Typegen.NexusPrismaFields<'Query'>
  Mutation: Typegen.NexusPrismaFields<'Mutation'>
}

interface NexusPrismaGenTypes {
  inputs: NexusPrismaInputs
  outputs: NexusPrismaOutputs
  methods: NexusPrismaMethods
  models: PrismaModels
  pagination: Pagination
  scalars: CustomScalars
}

declare global {
  interface NexusPrismaGen extends NexusPrismaGenTypes {}

  type NexusPrisma<
    TypeName extends string,
    ModelOrCrud extends 'model' | 'crud'
  > = Typegen.GetNexusPrisma<TypeName, ModelOrCrud>;
}
  "
`;

exports[`support relay pagination (default): schema 1`] = `
"type User {
  id: Int!
  posts(first: Int, last: Int, before: PostWhereUniqueInput, after: PostWhereUniqueInput): [Post!]!
}

type Post {
  id: Int!
  title: String!
}

input PostWhereUniqueInput {
  id: Int
}

type Query {
  ok: Boolean!
}"
`;

exports[`support relay pagination (default): typegen 1`] = `
"import * as Typegen from '@morgothulhu/nexus-plugin-prisma/typegen'
import * as Prisma from '@prisma/client';

// Pagination type
type Pagination = {
    first?: boolean
    last?: boolean
    before?: boolean
    after?: boolean
}

// Prisma custom scalar names
type CustomScalars = 'No custom scalars are used in your Prisma Schema.'

// Prisma model type definitions
interface PrismaModels {
  User: Prisma.User
  Post: Prisma.Post
}

// Prisma input types metadata
interface NexusPrismaInputs {
  Query: {
    users: {
      filtering: 'AND' | 'OR' | 'NOT' | 'id' | 'posts'
      ordering: 'id' | 'posts'
    }
    groupByUser: {
      filtering: 'AND' | 'OR' | 'NOT' | 'id' | 'posts'
      ordering: 'id' | '_count' | '_avg' | '_max' | '_min' | '_sum'
    }
    posts: {
      filtering: 'AND' | 'OR' | 'NOT' | 'id' | 'title' | 'author' | 'authorId'
      ordering: 'id' | 'title' | 'author' | 'authorId'
    }
    groupByPost: {
      filtering: 'AND' | 'OR' | 'NOT' | 'id' | 'title' | 'author' | 'authorId'
      ordering: 'id' | 'title' | 'authorId' | '_count' | '_avg' | '_max' | '_min' | '_sum'
    }
  },
  User: {
    posts: {
      filtering: 'AND' | 'OR' | 'NOT' | 'id' | 'title' | 'author' | 'authorId'
      ordering: 'id' | 'title' | 'author' | 'authorId'
    }
  }
  Post: {

  }
}

// Prisma output types metadata
interface NexusPrismaOutputs {
  Query: {
    aggregateUser: 'AggregateUser'
    users: 'User'
    user: 'User'
    groupByUser: 'UserGroupByOutputType'
    aggregatePost: 'AggregatePost'
    posts: 'Post'
    post: 'Post'
    groupByPost: 'PostGroupByOutputType'
  },
  Mutation: {
    createOneUser: 'User'
    deleteOneUser: 'User'
    deleteManyUser: 'AffectedRowsOutput'
    updateOneUser: 'User'
    updateManyUser: 'AffectedRowsOutput'
    upsertOneUser: 'User'
    createOnePost: 'Post'
    deleteOnePost: 'Post'
    deleteManyPost: 'AffectedRowsOutput'
    updateOnePost: 'Post'
    updateManyPost: 'AffectedRowsOutput'
    upsertOnePost: 'Post'
  },
  User: {
    id: 'Int'
    posts: 'Post'
  }
  Post: {
    id: 'Int'
    title: 'String'
    author: 'User'
    authorId: 'Int'
  }
}

// Helper to gather all methods relative to a model
interface NexusPrismaMethods {
  User: Typegen.NexusPrismaFields<'User'>
  Post: Typegen.NexusPrismaFields<'Post'>
  Query: Typegen.NexusPrismaFields<'Query'>
  Mutation: Typegen.NexusPrismaFields<'Mutation'>
}

interface NexusPrismaGenTypes {
  inputs: NexusPrismaInputs
  outputs: NexusPrismaOutputs
  methods: NexusPrismaMethods
  models: PrismaModels
  pagination: Pagination
  scalars: CustomScalars
}

declare global {
  interface NexusPrismaGen extends NexusPrismaGenTypes {}

  type NexusPrisma<
    TypeName extends string,
    ModelOrCrud extends 'model' | 'crud'
  > = Typegen.GetNexusPrisma<TypeName, ModelOrCrud>;
}
  "
`;
